--- a/package.json
+++ b/package.json
@@ -1,19 +1,44 @@
 {
-    "name": "Coding-Challenge-company",
-    "version": "1.0.0",
-    "description": "This is a company coding challenge.",
-    "main": "index.js",
-    "scripts": {
-        "user": "cd user && npm start",
-        "server": "node server/index.js",
-        "dev": "concurrently \"npm run server\" \"npm run user\""
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "express": "^4.17.1"
-    },
-    "devDependencies": {
-        "concurrently": "^6.3.0"
-    }
+  "name": "Coding-Challenge-company",
+  "version": "1.0.0",
+  "description": "This is a company coding challenge.",
+  "homepage": "https://arewinkl.github.io/CompanyDataDirectory/",
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "react": "^17.0.2",
+    "react-accessible-dropdown-menu-hook": "^3.1.0",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.1.1",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.0.1"
+  },
+  "main": "index.js",
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "user": "cd user && npm start",
+    "server": "node server/index.js",
+    "dev": "concurrently \"npm run server\" \"npm run user\""
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^6.3.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
